fixing logo color on mobile

--- a/wp-content/themes/hestia-child/style.css
+++ b/wp-content/themes/hestia-child/style.css
@@ -12,7 +12,9 @@ Version: 0.1
     background: #eee;
 }
 
-.navbar-transparent .navbar-brand img {
-    -webkit-filter: invert(100%);
-    filter: invert(100%);
+@media only screen and (min-width: 768px) {
+    .navbar-transparent .navbar-brand img {
+        -webkit-filter: invert(100%);
+        filter: invert(100%);
+    }
 }
